第十九次修改（集成关系抽取模块）

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,51 +54,51 @@
                         </a>
                     </li>
 
-                    <li>
-                        <a href="http://127.0.0.1:8001/toDataManager/">
-                            <i class="icon_piechart"></i>
-                            <span style="font-size:22px;">数据管理</span>
-                        </a>
-                    </li>
 
-                    <li>
-                        <a href="http://127.0.0.1:8001/toD2rq/">
-                            <i class="icon_bag"></i>
-                            <span style="font-size:22px;">D2rq管理</span>
-                        </a>
-                    </li>
                     <li>
                         <a href="http://127.0.0.1:8001/toAnnotation/">
                             <i class="icon_genius"></i>
                             <span style="font-size:22px;">文本标注</span>
                         </a>
                     </li>
-
                     <li>
-                        <a href="http://127.0.0.1:8001/toEntityRecognition/">
-                            <i class=" social_googledrive"></i>
-                            <span style="font-size:22px;">实体识别</span>
+                        <a>
+                            <i class="icon_bag"></i>
+                            <span style="font-size:22px;">知识抽取</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="http://127.0.0.1:8001/toEntityRecognition/">
+                                    <i class=" social_googledrive"></i>
+                                    <span style="font-size:22px;">实体识别</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="" href="http://127.0.0.1:8001/toRelation/">
+                                    <i class="icon_bag_alt"></i>
+                                    <span style="font-size:22px;">关系抽取</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://127.0.0.1:8001/toD2rq/">
+                                    <i class="icon_bag"></i>
+                                    <span style="font-size:22px;">D2rq管理</span>
+                                </a>
+                            </li>
+
+
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="http://127.0.0.1:8001/toDataManager/">
+                            <i class="icon_piechart"></i>
+                            <span style="font-size:22px;">数据管理</span>
                         </a>
                     </li>
-
-                    <li>
-                        <a href="http://127.0.0.1:8001/toEntitySearch/">
-                            <i class="icon_balance"></i>
-                            <span style="font-size:22px;">实体查询</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="" href="http://127.0.0.1:8001/toRelationeExtract/">
-                            <i class="icon_bag_alt"></i>
-                            <span style="font-size:22px;">关系抽取</span>
-                        </a>
-                    </li>
-
                     <li>
                         <a class="" href="http://127.0.0.1:8001/toRelationSearch/">
                             <i class="icon_chat_alt"></i>
-                            <span style="font-size:22px;">关系查询</span>
+                            <span style="font-size:22px;">知识查询</span>
                         </a>
                     </li>
 
