--- a/templates/entity_recognition.html
+++ b/templates/entity_recognition.html
@@ -1,169 +1,151 @@
 {% extends 'index.html' %}
+<!DOCTYPE html>
 {% block en %}
     {% load pagination_tags %}
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>文本标注界面</title>
+    <html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <title></title>
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="/static/css/bootstrap.css"/>
+        <link rel="stylesheet" href="/static/css/style2.css"/>
+        <link rel="stylesheet" href="/static/css/ner.css"/>
 
+        <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/static/js/ner.js"></script>
 
-    <link href="/static/css/style.css" rel="stylesheet">
-    <link href="/static/css/elegant-icons-style.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/static/css/style2.css"/>
+        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/echarts.common.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
+        <script>
+            $(document).ready(function () {
+                $("#show span[class!='none'][class!='enter']").mouseover(function () {
+                    var position = this.getBoundingClientRect()
+                    var Mylabel = $(this).attr('label');
+                    $("body").append("<div id='div_toop'>" + Mylabel + "</div>");
+                    var left = (position.left + position.right) / 2 - 50;
+                    if (position.bottom - position.top > 25) { //说明分成了两行
+                        left = position.right - 50;
+                    }
+                    $("#div_toop")
+                        .css({
+                            "top": (position.top - 50) + "px",
+                            "left": left + "px"
+                        }).show("slow");
+                }).mouseout(function () {
+                    $("#div_toop").remove();
+                });
+                $('input[id=file]').change(function () {
+                    $('#photoCover').val($(this).val());
+                });
+            });
 
-    <style>
-        .file input {
-            position: absolute;
-            font-size: 100px;
-            right: 0;
-            top: 0;
-            opacity: 0;
-        }
-
-        input[type="checkbox"] {
-            -webkit-appearance: none;
-            vertical-align: middle;
-            margin-top: 0;
-            background: #fff;
-            border: #999 solid 1px;
-            border-radius: 3px;
-            min-height: 12px;
-            min-width: 12px;
-        }
-
-        input[type="checkbox"]:checked {
-            background: #3190e8;
-        }
-
-        input[type="checkbox"]:checked::after {
-            content: '';
-            top: 3px;
-            left: 3px;
-            position: absolute;
-            background: transparent;
-            border: #fff solid 2px;
-            border-top: none;
-            border-right: none;
-            height: 6px;
-            width: 10px;
-            -moz-transform: rotate(-45deg);
-            -ms-transform: rotate(-45deg);
-            -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-        }
-    </style>
-</head>
-<body>
+        </script>
+    </head>
+    <body>
     <div class="container">
         <div class="row">
-        <!--head start-->
-        <div class="col-md-12">
-            <ol class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
-                <li><i class="fa fa-link" aria-hidden="true"></i>实体识别</li>
-            </ol>
-        </div>
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <header class="panel-heading">
-                    待实体识别文档上传：
-                </header>
-                <div class="panel-body">
-                    <form name="upload" enctype="multipart/form-data" method="post" action="/upload2/">
-                        {% csrf_token %}
-                        <input name="file" id="file" type="file" style="display: none"/>
-                        <div class="input-append">
-                            <input id="photoCover" type="text" class="form-control"
-                                   style="float: left; width: 350px">
-                            <a class="btn btn-default" style="border-radius: 0px; width: 50px"
-                               onclick="$('input[id=file]').click();">
-                                浏览
-                            </a>
-                            <button type="submit"
-                                    style="background-color:#8fd19e; width: 140px;height: 36px; margin-left: 100px" name="upload">上传实体识别文档
-                            </button>
-                        </div>
-                    </form>
-                </div>
+            <!--head start-->
+            <div class="col-md-12">
+                <ol class="breadcrumb">
+                    <li><i class="fa fa-home"></i><a href="/toHome/">主页</a></li>
+                    <li><i class="fa fa-link" aria-hidden="true"></i>实体识别</li>
+                </ol>
             </div>
-        </div>
 
-         <div class="col-md-12">
-            <div class="panel panel-default">
-                <header class="panel-heading">
-                    待识别文本：
-                </header>
-                <div class="panel-body">
-                    <div align="center">
-                            <textarea rows="5" cols="120" placeholder="" style="font-size: 15px">{{ new_data }}</textarea>
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <header class="panel-heading">
+                        实体识别：
+                    </header>
+                    <div class="panel-body">
+                        <form id="searchRelationForm" class="form-inline" style="padding-left: 10% ; padding-right: 10%"
+                              action="/ner/" method="post">
+                            {% csrf_token %}
+                            <div id="entity1" class="form-group">
+                                <input type="text" id="entity1_text" name="sentence" class="form-control"
+                                       placeholder="请输入句子" aria-describedby="basic-addon1"
+                                       style="width:500px;margin-left: 100px">
+                            </div>
+                            <div class="btn-group" style="margin-left:100px">
+                                <button type="submit" id="btnSearch" class="btn btn-primary">识别</button>
+                            </div>
+                        </form>
                     </div>
-                    <form name="display_result" method="post" action="/display_result/">
-                        {% csrf_token %}
-                        <br/>
-                        <div align="center">
-                            <button type="submit"  name="next" style="font-size:18px; width: 120px;height: 36px;background-color: #7abaff">开始识别</button>
-                            <br/>
-                        </div>
-                     </form>
                 </div>
             </div>
-        </div>
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <header class="panel-heading">
+                        待实体识别文档上传：
+                    </header>
+                    <div class="panel-body">
+                        <form name="upload" enctype="multipart/form-data" method="post" action="/upload2/">
+                            {% csrf_token %}
+                            <input name="file" id="file" type="file" style="display: none"/>
+                            <div class="input-append">
+                                <input id="photoCover" type="text" class="form-control"
+                                       style="float: left; width: 350px;margin-left: 250px">
+                                <a class="btn btn-default" style="border-radius: 0px; width: 50px"
+                                   onclick="$('input[id=file]').click();">
+                                    浏览
+                                </a>
+                                <button type="submit" style="margin-left: 100px" name="upload" class="btn btn-primary">
+                                    上传实体识别文档
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            {% if resultList %}
 
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <header class="panel-heading">
+                            识别结果：
+                        </header>
+                        <div class="panel-body" id="show">
+                            <div>
+                                {% for line in doc %}
+                                    <span class={{ line.type }} label={{ line.type }}>{{ line.str }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
 
-        {% if resultList %}
-        <div class="col-md-12">
-            <div class="panel panel-default ">
-                <header class="panel-heading">
-                    实体识别后的数据 :
-                </header>
-                <div class="panel-body ">
-                    <div class="show-list" style="position: relative;top: 30px;text-align: center">
-                        <table style="width: 1100px" class="table table-bordered table-hover" align="center" border="solid 3px">
+                    <div class="show-list" style="position: relative;top: 20px;text-align: center">
+                        <table style="width: 1100px" class="table table-bordered table-hover" align="center"
+                               border="solid 2px">
                             <thead>
                             <tr align="center" class="text-danger">
-                                <th align="center" width="100" class="text-center" style="font-size: 16px">序号</th>
-                                <th align="center" width="200" class="text-center" style="font-size: 16px">实体</th>
-                                <th align="center" width="200" class="text-center" style="font-size: 16px">实体类型</th>
+                                <th align="center" width="200" class="text-center" style="font-size: 13px">实体</th>
+                                <th align="center" width="200" class="text-center" style="font-size: 13px">实体类型</th>
                             </tr>
                             </thead>
                             <tbody id="tb">
                             {% autopaginate resultList 4 %}
                             {% for list in resultList %}
                                 <tr>
-                                    <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.0 }}</td>
-                                    <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.1 }}</td>
-                                    <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.2 }}</td>
+                                    <td align="center"
+                                        style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.str }}</td>
+                                    <td align="center"
+                                        style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.type }}</td>
                                 </tr>
                                 </tbody>
                             {% endfor %}
                         </table>
-                     {% paginate %}
+                        {% paginate %}
                     </div>
                     <br>
                 </div>
-            </div>
-        </div>
-        {% endif %}
-
-        <div class="footers">
-            <span style="color: white;">© 2020 东北大学-数字线技术项目团队 版权所有</span>
-        </div>
-        </div>
+                </div>
+            {% endif %}
     </div>
-
-
     {% if messages %}
         <script>
             {% for msg in messages %}
@@ -171,17 +153,6 @@
             {% endfor %}
         </script>
     {% endif %}
-
-
-    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/static/js/moment.js"></script>
-    <script type="text/javascript">
-    $('input[id=file]').change(function () {
-        $('#photoCover').val($(this).val());
-    });
-    </script>
-</body>
-</html>
-
+    </body>
+    </html>
 {% endblock en %}
