第二十次修改（集成实体识别模块）

--- a/templates/entity_recognition.html
+++ b/templates/entity_recognition.html
@@ -2,34 +2,34 @@
 <!DOCTYPE html>
 {% block en %}
     {% load pagination_tags %}
-    <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title></title>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="/static/css/bootstrap.css"/>
-        <link rel="stylesheet" href="/static/css/style2.css"/>
-        <link rel="stylesheet" href="/static/css/ner.css"/>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title></title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/static/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/static/css/style2.css"/>
+    <link rel="stylesheet" href="/static/css/ner.css"/>
 
-        <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/static/js/ner.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/ner.js"></script>
 
-        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-        <script>
-            $(document).ready(function () {
-                $("#show span[class!='none'][class!='enter']").mouseover(function () {
+    <script>
+     $(document).ready(function(){
+         $("#show span[class!='none'][class!='enter']").mouseover(function () {
                     var position = this.getBoundingClientRect()
                     var Mylabel = $(this).attr('label');
                     $("body").append("<div id='div_toop'>" + Mylabel + "</div>");
-                    var left = (position.left + position.right) / 2 - 50;
-                    if (position.bottom - position.top > 25) { //说明分成了两行
-                        left = position.right - 50;
+                    var left = (position.left + position.right)/2-50;
+                    if(position.bottom-position.top>25){ //说明分成了两行
+                        left = position.right-50;
                     }
                     $("#div_toop")
                         .css({
@@ -39,15 +39,15 @@
                 }).mouseout(function () {
                     $("#div_toop").remove();
                 });
-                $('input[id=file]').change(function () {
-                    $('#photoCover').val($(this).val());
-                });
-            });
+         $('input[id=file]').change(function () {
+            $('#photoCover').val($(this).val());
+          });
+     });
 
-        </script>
-    </head>
-    <body>
-    <div class="container">
+ </script>
+</head>
+<body>
+<div class="container">
         <div class="row">
             <!--head start-->
             <div class="col-md-12">
@@ -66,10 +66,9 @@
                         <form id="searchRelationForm" class="form-inline" style="padding-left: 10% ; padding-right: 10%"
                               action="/ner/" method="post">
                             {% csrf_token %}
-                            <div id="entity1" class="form-group">
+                            <div id="entity1" class="form-group" >
                                 <input type="text" id="entity1_text" name="sentence" class="form-control"
-                                       placeholder="请输入句子" aria-describedby="basic-addon1"
-                                       style="width:500px;margin-left: 100px">
+                                       placeholder="请输入句子" aria-describedby="basic-addon1"  style="width:500px;margin-left: 100px">
                             </div>
                             <div class="btn-group" style="margin-left:100px">
                                 <button type="submit" id="btnSearch" class="btn btn-primary">识别</button>
@@ -79,48 +78,48 @@
                 </div>
             </div>
             <div class="col-md-12">
+            <div class="panel panel-default">
+                <header class="panel-heading">
+                    待实体识别文档上传：
+                </header>
+                <div class="panel-body">
+                    <form name="upload" enctype="multipart/form-data" method="post" action="/upload2/">
+                        {% csrf_token %}
+                        <input name="file" id="file" type="file" style="display: none"/>
+                        <div class="input-append">
+                            <input id="photoCover" type="text" class="form-control"
+                                   style="float: left; width: 350px;margin-left: 250px">
+                            <a class="btn btn-default" style="border-radius: 0px; width: 50px"
+                               onclick="$('input[id=file]').click();">
+                                浏览
+                            </a>
+                            <button type="submit" style="margin-left: 100px" name="upload" class="btn btn-primary">上传实体识别文档
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-12" >
                 <div class="panel panel-default">
                     <header class="panel-heading">
-                        待实体识别文档上传：
+                        识别结果：
                     </header>
-                    <div class="panel-body">
-                        <form name="upload" enctype="multipart/form-data" method="post" action="/upload2/">
-                            {% csrf_token %}
-                            <input name="file" id="file" type="file" style="display: none"/>
-                            <div class="input-append">
-                                <input id="photoCover" type="text" class="form-control"
-                                       style="float: left; width: 350px;margin-left: 250px">
-                                <a class="btn btn-default" style="border-radius: 0px; width: 50px"
-                                   onclick="$('input[id=file]').click();">
-                                    浏览
-                                </a>
-                                <button type="submit" style="margin-left: 100px" name="upload" class="btn btn-primary">
-                                    上传实体识别文档
-                                </button>
-                            </div>
-                        </form>
+                    <div class="panel-body" id="show">
+                        <div >
+                            {%for line in doc%}
+                            <span class={{line.type}} label={{line.type}}>{{line.str}}</span>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
-            {% if resultList %}
-
-                <div class="col-md-12">
-                    <div class="panel panel-default">
-                        <header class="panel-heading">
-                            识别结果：
-                        </header>
-                        <div class="panel-body" id="show">
-                            <div>
-                                {% for line in doc %}
-                                    <span class={{ line.type }} label={{ line.type }}>{{ line.str }}</span>
-                                {% endfor %}
-                            </div>
-                        </div>
-                    </div>
-
+        </div>
+        {% if resultList %}
+        <div class="col-md-12">
+                <div >
                     <div class="show-list" style="position: relative;top: 20px;text-align: center">
-                        <table style="width: 1100px" class="table table-bordered table-hover" align="center"
-                               border="solid 2px">
+                        <table style="width: 1100px" class="table table-bordered table-hover" align="center" border="solid 2px">
                             <thead>
                             <tr align="center" class="text-danger">
                                 <th align="center" width="200" class="text-center" style="font-size: 13px">实体</th>
@@ -131,28 +130,26 @@
                             {% autopaginate resultList 4 %}
                             {% for list in resultList %}
                                 <tr>
-                                    <td align="center"
-                                        style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.str }}</td>
-                                    <td align="center"
-                                        style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.type }}</td>
+                                    <td align="center" style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.str }}</td>
+                                    <td align="center" style="display:table-cell; vertical-align:middle; font-size: 12px">{{ list.type }}</td>
                                 </tr>
                                 </tbody>
                             {% endfor %}
                         </table>
-                        {% paginate %}
+                     {% paginate %}
                     </div>
                     <br>
                 </div>
-                </div>
-            {% endif %}
-    </div>
-    {% if messages %}
+        </div>
+        {% endif %}
+</div>
+{% if messages %}
         <script>
             {% for msg in messages %}
                 alert('{{ msg.message }}');
             {% endfor %}
         </script>
     {% endif %}
-    </body>
-    </html>
+</body>
+</html>
 {% endblock en %}
