--- a/templates/index.html
+++ b/templates/index.html
@@ -11,116 +11,116 @@
     <link href="/static/css/elegant-icons-style.css" rel="stylesheet">
 </head>
 <body>
-    <section id="container" class="">
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="隐藏/显示侧栏" data-placement="bottom">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
-                </div>
+<section id="container" class="">
+    <header class="header dark-bg">
+        <div class="toggle-nav">
+            <div class="icon-reorder tooltips" data-original-title="隐藏/显示侧栏" data-placement="bottom">
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
+        </div>
 
-            <!--logo start-->
-            <a href="#" class="logo" style="font-size:25px;"> 基于Django的航空领域知识图谱 V1.0</a>
-            <!--logo end-->
-            <div class="top-nav notification-row">
-                <ul class="nav pull-right top-menu">
-                    <li>
-                        <a href='http://127.0.0.1:8001/help/'>
-                            <i class="fa" aria-hidden="true" style="font-size:25px;">Help</i>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav pull-right top-menu">
-                    <li>
-                        <a href='http://127.0.0.1:8001/exit/'>
-                            <i class="fa" aria-hidden="true" style="font-size:25px;">退出</i>
-                        </a>
-                    </li>
-                </ul>
+        <!--logo start-->
+        <a href="#" class="logo" style="font-size:25px;"> 基于Django的航空领域知识图谱 V1.0</a>
+        <!--logo end-->
+        <div class="top-nav notification-row">
+            <ul class="nav pull-right top-menu">
+                <li>
+                    <a href='http://127.0.0.1:8001/help/'>
+                        <i class="fa" aria-hidden="true" style="font-size:25px;">Help</i>
+                    </a>
+                </li>
+            </ul>
+            <ul class="nav pull-right top-menu">
+                <li>
+                    <a href='http://127.0.0.1:8001/exit/'>
+                        <i class="fa" aria-hidden="true" style="font-size:25px;">退出</i>
+                    </a>
+                </li>
+            </ul>
 
-            </div>
-        </header>
-        <!--header end-->
+        </div>
+    </header>
+    <!--header end-->
 
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu">
-                    <li>
-                        <a href="http://127.0.0.1:8001/toHome/">
-                            <i class="icon_house_alt"></i>
-                            <span style="font-size:22px;">主界面</span>
-                        </a>
-                    </li>
-
-
-                    <li>
-                        <a href="http://127.0.0.1:8001/toAnnotation/">
-                            <i class="icon_genius"></i>
-                            <span style="font-size:22px;">文本标注</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <i class="icon_bag"></i>
-                            <span style="font-size:22px;">知识抽取</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="http://127.0.0.1:8001/toEntityRecognition/">
-                                    <i class=" social_googledrive"></i>
-                                    <span style="font-size:22px;">实体识别</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="" href="http://127.0.0.1:8001/toRelation/">
-                                    <i class="icon_bag_alt"></i>
-                                    <span style="font-size:22px;">关系抽取</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://127.0.0.1:8001/toD2rq/">
-                                    <i class="icon_bag"></i>
-                                    <span style="font-size:22px;">D2rq管理</span>
-                                </a>
-                            </li>
+    <!--sidebar start-->
+    <aside>
+        <div id="sidebar" class="nav-collapse " style="width: 220px">
+            <!-- sidebar menu start-->
+            <ul class="sidebar-menu" style="width: 220px">
+                <li>
+                    <a href="http://127.0.0.1:8001/toHome/">
+                        <i class="icon_house_alt"></i>
+                        <span style="font-size:22px;text-align: center">主界面</span>
+                    </a>
+                </li>
 
 
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="http://127.0.0.1:8001/toDataManager/">
-                            <i class="icon_piechart"></i>
-                            <span style="font-size:22px;">数据管理</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="http://127.0.0.1:8001/toRelationSearch/">
-                            <i class="icon_chat_alt"></i>
-                            <span style="font-size:22px;">知识查询</span>
-                        </a>
-                    </li>
+                <li>
+                    <a href="http://127.0.0.1:8001/toAnnotation/">
+                        <i class="icon_genius"></i>
+                        <span style="font-size:22px;">文本标注</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i class="icon_bag"></i>
+                        <span style="font-size:22px;">知识抽取</span>
+                    </a>
+                    <ul>
+                        <li>
+                            <a href="http://127.0.0.1:8001/toEntityRecognition/">
+                                <i class=" social_googledrive"></i>
+                                <span style="font-size:22px;">实体识别</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="" href="http://127.0.0.1:8001/toRelation/">
+                                <i class="icon_bag_alt"></i>
+                                <span style="font-size:22px;">文本关系抽取</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://127.0.0.1:8001/toD2rq/">
+                                <i class="icon_plus-box"></i>
+                                <span style="font-size:22px;">DB关系抽取</span>
+                            </a>
+                        </li>
 
-                    <li>
-                        <a class="" href="http://127.0.0.1:8001/toAnswer/">
-                            <i class="icon_book_alt"></i>
-                            <span style="font-size:22px;">问答系统</span>
-                        </a>
-                    </li>
 
-                </ul>
-                <!-- sidebar menu end-->
-            </div>
-        </aside>
-        <!--sidebar end-->
-        <!--main content start-->
-        <section id="main-content">
-            <section class="wrapper">
-                {% block en %}
-                {% endblock en%}
-            </section>
+                    </ul>
+                </li>
+                <li>
+                    <a href="http://127.0.0.1:8001/toDataManager/">
+                        <i class="icon_piechart"></i>
+                        <span style="font-size:22px;">知识存储</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="" href="http://127.0.0.1:8001/toRelationSearch/">
+                        <i class="icon_chat_alt"></i>
+                        <span style="font-size:22px;">知识查询</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a class="" href="http://127.0.0.1:8001/toAnswer/">
+                        <i class="icon_book_alt"></i>
+                        <span style="font-size:22px;">问答系统</span>
+                    </a>
+                </li>
+
+            </ul>
+            <!-- sidebar menu end-->
+        </div>
+    </aside>
+    <!--sidebar end-->
+    <!--main content start-->
+    <section id="main-content">
+        <section class="wrapper">
+            {% block en %}
+            {% endblock en %}
         </section>
     </section>
+</section>
 </body>
 </html>
