--- a/templates/relation_search.html
+++ b/templates/relation_search.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="form-group" style="padding: 2%">
                                 <select name="relation_text" id="relation_text" class="form-control" style="text-align: center">
-                                    <option value="{{ relation}}">{{ relation}}</option>
+                                    <option value="">--选择关系名--</option>
                                     <option value="参考">参考</option>
                                     <option value="组成">组成</option>
                                     <option value="性能指标">性能指标</option>
